# NFC

./: .gitignore  ANDROID_UI_MOCKUPS.md  CHANGELOG.md  COMMUNICATION_PROTOCOLS.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DESIGN_REVIEW_CHECKLIST.md  IMPLEMENTATION_TIMELINE.md  PHASE1_KICKOFF_PREP.md  PROGRESS_TRACKER.md  README.md  SYSTEM_ARCHITECTURE.md  VALIDATION_ENHANCEMENTS.md  VERSION_CONTROL_SETUP.md
.github/: CODEOWNERS  pull_request_template.md
android/: .gitignore  README.md  build.gradle  gradlew
server/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_SUMMARY.md  __init__.py  integration_test.py  main.py  pyproject.toml  requirements.txt  setup.py
server/api/: __init__.py  app.py  exceptions.py  validators.py
server/api/routes/: __init__.py  connection.py  device.py  nfc_data.py  user.py
server/api/schemas/: __init__.py  base.py  connection.py  device.py  nfc.py  user.py
server/db/: __init__.py  config.py
server/db/migrations/: __init__.py  alembic.ini  env.py  env.py.bak  manager.py
server/db/migrations/versions/: 20250626_030929_add_metadata_to_nfctag_adjust_user_model.py  20250627_120000_convert_json_to_jsonb.py
server/db/models/: __init__.py  base.py  connection.py  device.py  nfc_record.py  nfc_tag.py  user.py
server/tests/: README.md  __init__.py  conftest.py  test_helpers.py  test_helpers_guide.md  test_helpers_usage_example.py  test_validation_constraints.py
server/tests/api/: __init__.py  test_basic.py  test_connection_routes.py  test_device_routes.py  test_nfc_crud.py  test_user_routes.py  test_validators.py
(+43 files in other folders)
